--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     },
     "devDependencies": {
         "coffee-script": "1.4.0",
-        "should": "1.2.1"
+        "should": "1.2.1",
+        "which": "*"
     },
     "keywords": [
         "rest"
@@ -20,7 +21,7 @@
     "main": "./lib/ebb",
     "bin": {},
     "scripts": {
-        "dev": "cake dev",
+        "build": "cake build",
         "test": "cake test"
     },
     "engines": { "node": "*" }
