--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "coffee-script": "1.4.0",
+        "jasmine-node": "*",
         "should": "1.2.1",
         "which": "*"
     },
