--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "coffee-script": "1.4.0",
         "jasmine-node": "*",
         "should": "1.2.1",
-        "which": "*"
+        "which": "*",
+        "watchit": "*"
     },
     "keywords": [
         "rest"
