--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         { "name": "nomilous", "email": "nomilous@gmail.com" }
     ],
     "dependencies": {
-        "restify": "1.4.4"
+        "restify": "1.4.4",
+        "connect": "*",
+        "connect-redis": "*"
     },
     "devDependencies": {
         "express": "*",
