--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "passport": "~0.1.15",
     "passport-local": "~0.1.6",
     "connect-redis": "~1.4.5",
-    "connect": "~2.7.1"
+    "connect": "~2.7.1",
+    "restify": "~2.0.4"
   },
   "devDependencies": {
     "should": "~1.2.1",
     "coffee-script": "~1.4.0",
     "express": "~3.0.4",
     "hound": "~1.0.4",
-    "mocha": "~1.7.4"
+    "mocha": "~1.7.4",
+    "request": "~2.12.0"
   },
   "keywords": [
     "effortless",
